# suplex

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md
.github/: renovate.json
.github/workflows/: api-ci.yml  web-ci.yml
api/: Cargo.toml
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20260420_000001_create_promotions.rs  m20260420_000002_create_sync_log.rs  m20260420_000003_create_titles.rs
api/src/: config.rs  main.rs
api/src/db/: mod.rs
api/src/entities/: mod.rs  promotion.rs  sync_log.rs  title.rs
api/src/graphql/: mod.rs  schema.rs
api/src/graphql/mutation/: mod.rs
api/src/graphql/query/: mod.rs
api/src/graphql/types/: mod.rs  promotion.rs  title.rs
api/src/services/: scraper.rs
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
docs/: DESIGN.md
web/: codegen.ts  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Layout.test.tsx  Layout.tsx
web/src/graphql/: client.ts  operations.ts
web/src/pages/: ChampionshipsPage.tsx  PromotionsPage.tsx  SchedulePage.tsx  SettingsPage.tsx
web/src/styles/: index.css
